indexページの追記

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
         <div class="service-cardarea">
 
           <div class="service-card">
-            <img src="./images/足.webp" alt="" class="service-img">
+          <%= image_tag "images/足.webp", class:"service-img" %>
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
               <h2 class="service-description">足を鍛えた方</h2>
@@ -30,7 +30,7 @@
           </div>
 
           <div class="service-card">
-            <img src="./images/腹筋.jpg" alt="" class="service-img" >
+          <%= image_tag "images/腹筋.jpg", class:"service-img" %>
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
               <h2 class="service-description">腹筋を鍛えた方</h2>
@@ -39,7 +39,7 @@
           </div>
 
           <div class="service-card">
-            <img src="./images/腕.jpg" alt="" class="service-img">
+          <%= image_tag "images/腕.jpg", class:"service-img" %>
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
               <h2 class="service-description">腕を鍛えた方</h2>
