--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   <header class="header">
-    <img src="./images/Create_Your_Own_Logo_-_Online_Logo_Maker.png" alt="" class="logo">
+  <%= link_to image_tag("images/Create_Your_Own_Logo_-_Online_Logo_Maker.png", class:"logo"), "/" %>
     <ul class="menu">
       <li class="menu-item"><a href="#" class="menu-item-link">愛好会概要</a></li>
       <li class="menu-item"><a href="#" class="menu-item-link">投稿一覧</a></li>
