indexページへの遷移

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
       <li class="menu-item"><a href="#" class="menu-item-link">投稿一覧</a></li>
       <li class="menu-item"><a href="https://div-inc.slack.com/archives/CHYFPGM8B" class="menu-item-link">公式Slack</a></li>
       <li class="menu-item"><a href="/Users/tech-camp/projects/portforio/contact.html" class="menu-item-link">お問い合わせ</a></li>
-      <li class="menu-item"><a href="#" class="menu-item-link menu-item-link-btn">成果報告</a></li>
+      <li class="menu-item">
+        <%= link_to '成果報告', class="menu-item-link menu-item-link-btn" %>
+      </li>
     </ul>
   </header>
     <%= yield %>
