--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -223,3 +223,21 @@
     text-align: center;
     letter-spacing: 2px;
   }
+  .sub-google-message{
+    font-size: 15px;
+    color:	#444444;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-left: 535px;
+  }
+  
+  .footer {
+    background-color: #000000;
+    padding: 30px 0;
+  }
+  .copyright {
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    letter-spacing: 2px;
+  }
