newページへの遷移文→newのレイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
       <li class="menu-item"><a href="#" class="menu-item-link">愛好会概要</a></li>
       <li class="menu-item"><a href="#" class="menu-item-link">投稿一覧</a></li>
       <li class="menu-item"><a href="https://div-inc.slack.com/archives/CHYFPGM8B" class="menu-item-link">公式Slack</a></li>
-      <li class="menu-item"><a href="/Users/tech-camp/projects/portforio/contact.html" class="menu-item-link">お問い合わせ</a></li>
+      <li class="menu-item"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGDAJiHfWwdxa8xlPVxudbq9YZaHs8_Dky5pGdClpmKASDAA/viewform?usp=sf_link" class="menu-item-link">お問い合わせ</a></li>
       <li class="menu-item">
-        <%= link_to '成果報告', class="menu-item-link menu-item-link-btn" %>
+        <a class="menu-item-link menu-item-link-btn" href="/posts/new">成果報告</a>
       </li>
     </ul>
   </header>
