contactページ作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,9 @@
     <title>MuscleTraining1120</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
       <li class="menu-item"><a href="#" class="menu-item-link">愛好会概要</a></li>
       <li class="menu-item"><a href="#" class="menu-item-link">投稿一覧</a></li>
       <li class="menu-item"><a href="https://div-inc.slack.com/archives/CHYFPGM8B" class="menu-item-link">公式Slack</a></li>
-      <li class="menu-item"><a href="/posts" class="menu-item-link">お問い合わせ</a></li>
+      <li class="menu-item"><a href="/contact" class="menu-item-link">お問い合わせ</a></li>
       <li class="menu-item">
         <a class="menu-item-link menu-item-link-btn" href="/posts/new">成果報告</a>
       </li>
