--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <header class="header">
   <%= link_to image_tag("images/Create_Your_Own_Logo_-_Online_Logo_Maker.png", class:"logo"), "/" %>
     <ul class="menu">
-      <li class="menu-item"><a href="#" class="menu-item-link">愛好会概要</a></li>
+      <li class="menu-item"><a href="/contact/:id" class="menu-item-link">愛好会概要</a></li>
       <li class="menu-item"><a href="#" class="menu-item-link">投稿一覧</a></li>
       <li class="menu-item"><a href="https://div-inc.slack.com/archives/CHYFPGM8B" class="menu-item-link">公式Slack</a></li>
       <li class="menu-item"><a href="/contact" class="menu-item-link">お問い合わせ</a></li>
