--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
               <div class="message-date">それは<br>最高の「趣味」であり<br>理想の体の「最適解」</div>
         </div>
         <div class="sub-message">No Pump, no growth</div>
-        <a href="#" class="service-btn-about">詳しくはこちら</a>
+        <a href="/contact/:id" class="service-btn-about">詳しくはこちら</a>
      </div>
 
       <div class="services-section">
@@ -56,7 +56,7 @@
         </div>
         <div class="small-logo">Muscle Training</div>
         <div class="contact-message">小林部長への直接的な質問、大歓迎でお待ちしております。また、当ページへの要望・質問も承ります。<br>部活動内企画等も、どしどしお待ちしております。</div>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGDAJiHfWwdxa8xlPVxudbq9YZaHs8_Dky5pGdClpmKASDAA/viewform?usp=sf_link" class="service-btn-about">お問い合わせ</a>
+        <a href="/contact" class="service-btn-about">お問い合わせ</a>
      </div>
 
       <div class="google-contents">
