--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,9 @@
 </div>
   <div class="contents row">
     <div class="container">
-      <h3>今日も追い込んだ筋肉にご褒美を</h3>
+    <div class="pampu">
+      <h3>パンプした筋肉にご褒美を</h3>
+    </div>
       <%= form_with(model: @post, local: true) do |form| %>
         <div class="front-text">名前</div>
         <%= form.text_field :name, placeholder: "あなたの名前を入力してください。" %>
