--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -86,6 +86,14 @@
     font-weight: bold;
     margin-left: 120px;  
   }
+  .category-select{
+    width: 70%;
+    margin: 8px 90px 15px;
+    padding: 10px;
+    border: 1px solid #D8D8D8;
+    border-radius: 10px;
+    font-family: "游ゴシック", "YuGothic";
+  }
   
   .container h3 {
     width: 450px;
