--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,18 +7,18 @@
     <div class="pampu">
       <h3>パンプした筋肉にご褒美を</h3>
     </div>
-      <%= form_with(model: @post, local: true) do |form| %>
+      <%= form_with model: @post, url:posts_path,local: true do |f| %>
         <div class="front-text">名前</div>
-        <%= form.text_field :name, placeholder: "あなたの名前を入力してください。" %>
+        <%= f.text_field :name, placeholder: "あなたの名前を入力してください。" %>
         <div class="front-text">鍛錬部位</div>
-        <%= form.text_field :category_id, placeholder: "どこを鍛えた？" %>
+        <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
         <div class="front-text">一言コメント</div>
-        <%= form.text_area :message, placeholder: "一言メッセージ", rows: "2" %>
+        <%= f.text_area :message, placeholder: "一言メッセージ", rows: "2" %>
         <div class="front-text">画像</div>
         <input type="file" id="example" multiple>
         <div id="preview"></div>
 
-        <%= form.submit "SEND" %>
+        <%= f.submit "SEND" %>
       <% end %>
     </div>
   </div>
