--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -55,7 +55,7 @@
           筋トレ愛好会
         </div>
         <div class="small-logo">Muscle Training</div>
-        <div class="contact-message">小林部長への直接的な質問、大歓迎でお待ちしております。また、当ページへの要望・質問も承ります。<br>部活動内企画等も、どしどしお待ちしております。</div>
+        <div class="contact-message">小林部長への直接的な質問、大歓迎でお待ちしております。<br>また、当ページへの要望・質問も承ります。<br>部活動内企画等も、お待ちしております。ex.貸し切りジム合同トレーニング等</div>
         <a href="/contact" class="service-btn-about">お問い合わせ</a>
      </div>
 
