--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -1,4 +1,12 @@
 <body>
+      <div class="hedde-contents">
+        <div class="hedde-name">筋トレ愛好会とは？</div>
+        <div class="title-messages">
+              <div class="message-date2">筋トレという素晴らしい趣味を通じて良質な人間関係を構築すること<br>
+              筋トレを通じて理想な身体を手に入れて自己肯定感を高めること</div>
+        </div>
+        <div class="sub-message">No Pump, no growth</div>
+     </div>
   <div class="top-gaiyou">
     <div class="gaiyou-name-contact">愛好会概要</div>
   </div>
