--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,11 +35,10 @@
   }
   
   .first-view {
-    background-image: url(images/BO151030535008_TP_V.jpg);
+    background: url(images/BO151030535008_TP_V.jpg) fixed;
     background-size: cover;
     background-position: center;
     height: 800px;
-  
   }
   .first-view-textarea {
     padding: 320px 60px;
