--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -1,11 +1,24 @@
 <body>
+<div class="contenter">
       <div class="hedde-contents">
         <div class="hedde-name">筋トレ愛好会とは？</div>
         <div class="title-messages">
-              <div class="message-date2">筋トレという素晴らしい趣味を通じて良質な人間関係を構築すること<br>
-              筋トレを通じて理想な身体を手に入れて自己肯定感を高めること</div>
+              <div class="message-date2">1,筋トレを通じて<br>　　　　良質な人間関係を構築すること<br><br>
+              2,筋トレを通じて<br>　　　　自己肯定感を高めること</div>
         </div>
-        <div class="sub-message">No Pump, no growth</div>
+        <div class="sub-message2">筋トレを通じて人生を豊かにする部活です</div>
+     </div>
+ </div>
+     <div class="services-section">
+     <p class="services-section-bar">部長紹介（メッセージ）</p>
+     <div class="daihyou-name-contact">部長コメント</div>
+     <div class="top-gaiyou2">
+        <div class="image-daihyou">
+          <%= image_tag 'images/LCKEmczw12B1ndP1606616443_1606616527.jpg', size: '510x420' ,class: "kobayashi-btn-icon" %>
+        </div>
+        <div class="daihyou-message">
+      
+        </div>
      </div>
   <div class="top-gaiyou">
     <div class="gaiyou-name-contact">愛好会概要</div>
@@ -45,4 +58,5 @@
 width="900" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 <div class="sub-google-message">住所：東京都渋谷区神南1丁目12-16アジアビル8F<br>電話：080-4372-0050</div>
 </div>
+
 </body>
