詳細ページへのルーティング作成

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,8 +24,8 @@
           <%= image_tag "images/足.webp", class:"service-img" %>
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
-              <h2 class="service-description">足を鍛えた方</h2>
-              <a href="#" class="service-btn">一覧はこちら</a>
+              <h2 class="service-description">脚を鍛えた方</h2>
+              <a href="/posts/leg" class="service-btn">一覧はこちら</a>
             </div>
           </div>
 
@@ -34,7 +34,7 @@
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
               <h2 class="service-description">腹筋を鍛えた方</h2>
-              <a href="#" class="service-btn">一覧はこちら</a>
+              <a href="/posts/fukkin" class="service-btn">一覧はこちら</a>
             </div>
           </div>
 
@@ -43,7 +43,7 @@
             <div class="service-textarea">
               <img src="" alt="" class="service-logo">
               <h2 class="service-description">腕を鍛えた方</h2>
-              <a href="#" class="service-btn">一覧はこちら</a>
+              <a href="/posts/arm" class="service-btn">一覧はこちら</a>
             </div>
           </div>
 
