--- a/app/views/posts/arm.html.erb
+++ b/app/views/posts/arm.html.erb
@@ -4,61 +4,19 @@
     <main class="main">
       <div class="inner">
         <h1 class="page-heading">【腕投稿一覧】</h1>
+        <% @posts.each do |post| %>
         <div class="card__wrapper">
           <div class="card">
            <%= image_tag "images/足.webp", class:"card__img" %>
             <div class="card__body">
-              <h2 class="card__title">投稿者：越川</h2>
+              <h2 class="card__title">投稿者：<%= post.name %></h2>
               <p class="card__summary">
-              一言メッセージ：<br>今日は死ぬほど頑張った。
+              <p>一言：<%= post.message %></p>
               </p>
             </div>
           </div>
-          <div class="card">
-          <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：あけみ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>いっぱい寝た。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腕.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：ゴンザレス</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>強くなった。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">コシカワ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>いいね。うんいいよ。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/足.webp", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">エチガワ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>なんや？ええやん、自分
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腕.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：かわごえ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>誰がシェフや
-              </p>
-            </div>
-          </div>
+          <% end %>
         </div>
-      </div>
-    </main>
+        </div>
+     </main>
+
