--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -7,10 +7,6 @@
     width: 1024px;
     margin: 0 auto;
    }
-   .logo {
-    width: 100px;
-   }
-
    .card__body{
      width: 300px;
      height: 150px;
@@ -94,4 +90,10 @@
     .card__summary {
       font-size: 14px;
     }
+   }
+   .list-arm-page-heading{
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 28px;
+    margin-left: 200px;
    }
