--- a/app/views/posts/arm.html.erb
+++ b/app/views/posts/arm.html.erb
@@ -2,13 +2,13 @@
   <div class="gaiyou-name">報告一覧</div>
 </div>
     <main class="main">
-      <div class="inner">
-        <h1 class="page-heading">【腕投稿一覧】</h1>
+    <h1 class="arm-page-heading">【腕筋投稿一覧】</h1>
+      <div class="arm-inner">
         <% @posts.each do |post| %>
         <%= link_to post_path(post.id), method: :get do %>
-        <div class="card__wrapper">
-          <div class="card">
-          <%= image_tag post.image, class: "card__img" if post.image.attached? %>
+        <div class="arm-card__wrapper">
+          <div class="arm-card">
+          <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
             <div class="card__body">
               <h2 class="card__title">投稿者：<%= post.name %></h2>
               <p class="card__summary">
