--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -3,190 +3,66 @@
   <div class="gaiyou-name">報告一覧</div>
 </div>
     <main class="main">
-      <div class="inner">
-        <h1 class="page-heading">【腕投稿一覧】</h1>
-        <div class="card__wrapper">
-          <div class="card">
-           <%= image_tag "images/足.webp", class:"card__img" %>
+    <h1 class="arm-page-heading">【脚一覧】</h1>
+      <div class="arm-inner">
+        <% @posts.each do |post| %>
+        <%= link_to post_path(post.id), method: :get do %>
+        <div class="arm-card__wrapper">
+          <div class="arm-card">
+          <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
             <div class="card__body">
-              <h2 class="card__title">投稿者：越川</h2>
+              <h2 class="card__title">投稿者：<%= post.name %></h2>
               <p class="card__summary">
-              一言メッセージ：<br>今日は死ぬほど頑張った。
+              <p>一言：<%= post.message %></p>
               </p>
             </div>
           </div>
-          <div class="card">
-          <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：あけみ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>いっぱい寝た。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腕.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：ゴンザレス</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>強くなった。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">コシカワ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>いいね。うんいいよ。
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/足.webp", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">エチガワ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>なんや？ええやん、自分
-              </p>
-            </div>
-          </div>
-          <div class="card">
-          <%= image_tag "images/腕.jpg", class:"card__img" %>
-            <div class="card__body">
-              <h2 class="card__title">投稿者：かわごえ</h2>
-              <p class="card__summary">
-              一言メッセージ：<br>誰がシェフや
-              </p>
-            </div>
-          </div>
+          <% end %>
         </div>
+        <% end %>
       </div>
-    </main>
+     </main>
 
+     <main class="main">
+     <h1 class="list-arm-page-heading">【腹筋一覧】</h1>
+       <div class="arm-inner">
+         <% @posts.each do |post| %>
+         <%= link_to post_path(post.id), method: :get do %>
+         <div class="arm-card__wrapper">
+           <div class="arm-card">
+           <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
+             <div class="card__body">
+               <h2 class="card__title">投稿者：<%= post.name %></h2>
+               <p class="card__summary">
+               <p>一言：<%= post.message %></p>
+               </p>
+             </div>
+           </div>
+           <% end %>
+         </div>
+         <% end %>
+       </div>
+      </main>
 
-    <main class="main">
-    <div class="inner">
-      <h1 class="page-heading">【腹筋投稿一覧】</h1>
-      <div class="card__wrapper">
-        <div class="card">
-         <%= image_tag "images/足.webp", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">投稿者：越川</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>今日は死ぬほど頑張った。
-            </p>
+      <main class="main">
+      <h1 class="list-arm-page-heading">【腕一覧】</h1>
+        <div class="arm-inner">
+          <% @posts.each do |post| %>
+          <%= link_to post_path(post.id), method: :get do %>
+          <div class="arm-card__wrapper">
+            <div class="arm-card">
+            <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
+              <div class="card__body">
+                <h2 class="card__title">投稿者：<%= post.name %></h2>
+                <p class="card__summary">
+                <p>一言：<%= post.message %></p>
+                </p>
+              </div>
+            </div>
+            <% end %>
           </div>
+          <% end %>
         </div>
-        <div class="card">
-        <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">投稿者：あけみ</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>いっぱい寝た。
-            </p>
-          </div>
-        </div>
-        <div class="card">
-        <%= image_tag "images/腕.jpg", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">投稿者：ゴンザレス</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>強くなった。
-            </p>
-          </div>
-        </div>
-        <div class="card">
-        <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">コシカワ</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>いいね。うんいいよ。
-            </p>
-          </div>
-        </div>
-        <div class="card">
-        <%= image_tag "images/足.webp", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">エチガワ</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>なんや？ええやん、自分
-            </p>
-          </div>
-        </div>
-        <div class="card">
-        <%= image_tag "images/腕.jpg", class:"card__img" %>
-          <div class="card__body">
-            <h2 class="card__title">投稿者：かわごえ</h2>
-            <p class="card__summary">
-            一言メッセージ：<br>誰がシェフや
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
+       </main>
 
-
-  <main class="main">
-  <div class="inner">
-    <h1 class="page-heading">【脚投稿一覧】</h1>
-    <div class="card__wrapper">
-      <div class="card">
-       <%= image_tag "images/足.webp", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">投稿者：越川</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>今日は死ぬほど頑張った。
-          </p>
-        </div>
-      </div>
-      <div class="card">
-      <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">投稿者：あけみ</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>いっぱい寝た。
-          </p>
-        </div>
-      </div>
-      <div class="card">
-      <%= image_tag "images/腕.jpg", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">投稿者：ゴンザレス</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>強くなった。
-          </p>
-        </div>
-      </div>
-      <div class="card">
-      <%= image_tag "images/腹筋.jpg", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">コシカワ</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>いいね。うんいいよ。
-          </p>
-        </div>
-      </div>
-      <div class="card">
-      <%= image_tag "images/足.webp", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">エチガワ</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>なんや？ええやん、自分
-          </p>
-        </div>
-      </div>
-      <div class="card">
-      <%= image_tag "images/腕.jpg", class:"card__img" %>
-        <div class="card__body">
-          <h2 class="card__title">投稿者：かわごえ</h2>
-          <p class="card__summary">
-          一言メッセージ：<br>誰がシェフや
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
 </body>
