--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -17,7 +17,14 @@
           <%= image_tag 'images/LCKEmczw12B1ndP1606616443_1606616527.jpg', size: '510x420' ,class: "kobayashi-btn-icon" %>
         </div>
         <div class="daihyou-message">
-      
+        <li>
+          <div class="kobayashi">小林章寿（29）</div>
+          <div class="yokuwakaran">
+          「君の体がよく鍛錬されていて、<br>自分に自信があれば、<br>君のことに好意を持ち、君のそばにいたくなり、君のために何かしたいと思ってくれる人に<br>出会うだろう」byセクシャル
+          <p>　　</p>
+          <p>あなたの入部をいつでも待っています。</p>
+          </div>
+        </li>
         </div>
      </div>
   <div class="top-gaiyou">
