--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,7 @@
             <div class="show-card__body">
               <h2 class="show-card__title">投稿者：<%= @post.name %></h2>
               <p class="show-card__summary">
+              <p>鍛えた部位：<%= @post.category.name %></p>
               <p>一言：<%= @post.message %></p>
               </p>
               <li class="show-li">
