--- a/app/assets/stylesheets/update.derete.css
+++ b/app/assets/stylesheets/update.derete.css
@@ -1,11 +1,13 @@
 .update-top-gaiyou{
     width: auto;
-    padding-top: 145px;
-    padding-bottom: 50px;
+    padding-top: 205px;
+    padding-bottom: 250px;
     font-size: 40px;
     text-align: center;
     border-bottom: 3px  gray;
     color: black;
+    text-decoration: none;
+    background-color: white;
   }
   .update-gaiyou-name{
     font-size: 40px;
@@ -15,7 +17,5 @@
     width: 600px;
     font-weight: bold;
     margin: auto;
-  }
-  a{
-    text-decoration:none;
+    text-decoration: none;
   }
