--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -6,13 +6,14 @@
     <h1 class="arm-page-heading">【脚一覧】</h1>
       <div class="arm-inner">
         <% @posts.each do |post| %>
-        <%= link_to post_path(post.id), method: :get do %>
+        <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
         <div class="arm-card__wrapper">
           <div class="arm-card">
           <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
             <div class="card__body">
               <h2 class="card__title">投稿者：<%= post.name %></h2>
               <p class="card__summary">
+              <p>鍛えた部位：<%= post.category.name %></p>
               <p>一言：<%= post.message %></p>
               </p>
             </div>
@@ -27,13 +28,14 @@
      <h1 class="list-arm-page-heading">【腹筋一覧】</h1>
        <div class="arm-inner">
          <% @posts.each do |post| %>
-         <%= link_to post_path(post.id), method: :get do %>
+          <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
          <div class="arm-card__wrapper">
            <div class="arm-card">
            <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
              <div class="card__body">
                <h2 class="card__title">投稿者：<%= post.name %></h2>
                <p class="card__summary">
+               <p>鍛えた部位：<%= post.category.name %></p>
                <p>一言：<%= post.message %></p>
                </p>
              </div>
@@ -48,13 +50,14 @@
       <h1 class="list-arm-page-heading">【腕一覧】</h1>
         <div class="arm-inner">
           <% @posts.each do |post| %>
-          <%= link_to post_path(post.id), method: :get do %>
+            <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
           <div class="arm-card__wrapper">
             <div class="arm-card">
             <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
               <div class="card__body">
                 <h2 class="card__title">投稿者：<%= post.name %></h2>
                 <p class="card__summary">
+                <p>鍛えた部位：<%= post.category.name %></p>
                 <p>一言：<%= post.message %></p>
                 </p>
               </div>
