コメントアウト

--- a/app/assets/stylesheets/arm.css
+++ b/app/assets/stylesheets/arm.css
@@ -1,4 +1,4 @@
-.arm-top-gaiyou{
+/* .arm-top-gaiyou{
     width: auto;
     padding-top: 145px;
     font-size: 40px;
@@ -41,17 +41,4 @@
     border: 1px solid #ddd;
     border-radius: 15px;
     margin-top: 20px;
-}
-.arm-card__img {
-    margin-bottom: 16px;
-    object-fit: cover;
-    width: 700px;
-    height: 200px;
-   }
-.arm-card{
-    text-decoration: none;
-}
-.Editlink{
-    text-decoration: none;
-    color: #38aef0 ;
-}
+} */
