--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,4 +1,4 @@
-  button,
+  /* button,
   input,
   select,
   textarea {
@@ -117,4 +117,4 @@
     width: 200px;
     margin: 10px;
     border: solid 1px silver;
-  }
+  } */
