--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     background-color: #f1f8fe;
     margin-bottom: 48px;
     padding: 10px 0;
@@ -55,7 +55,7 @@
     font-size: 10px;
    }
   
-   /* タブレット表示時 */
+
   @media (max-width: 1024px) {
     .inner {
       width: 90%;
@@ -75,7 +75,7 @@
       font-size: 16px;
     }
    }
-    /* スマホ表示時 */
+
    @media (max-width: 599px) {
     .page-heading {
       font-size: 20px;
@@ -96,4 +96,4 @@
     margin-top: 20px;
     margin-bottom: 28px;
     margin-left: 200px;
-   }
+   } */
