--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -224,3 +224,28 @@
     letter-spacing: 2px;
   }
   
+  .update-top-gaiyou{
+    width: auto;
+    padding-top: 205px;
+    padding-bottom: 250px;
+    font-size: 40px;
+    text-align: center;
+    border-bottom: 3px  gray;
+    color: black;
+    background-color: white;
+  }
+  .update-gaiyou-name{
+    font-size: 40px;
+    text-align: center;
+    color: black;
+    border-bottom: 3px solid black;
+    width: 600px;
+    font-weight: bold;
+    margin: auto;
+  }
+  .arm-card__img {
+    margin-bottom: 16px;
+    object-fit: cover;
+    width: 700px;
+    height: 200px;
+} */
