--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* .header {
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -248,4 +248,4 @@
     object-fit: cover;
     width: 700px;
     height: 200px;
-} */
+}
