--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,4 +1,4 @@
-/* .show-top-gaiyou{
+.show-top-gaiyou{
     width: auto;
     padding-top: 145px;
     padding-bottom: 50px;
@@ -68,4 +68,4 @@
     padding: 15px 33px;
     font-size: 25px;
     margin-left: 50px;
-   } */
+   }
