--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     box-sizing: border-box;
 }
   
@@ -19,4 +19,4 @@ li {
 }
 img {
   max-width: 100%;
-  vertical-align: bottom;} */
+  vertical-align: bottom;}
