--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -1,4 +1,4 @@
-/* .header {
+.header {
     background-color: #f1f8fe;
     margin-bottom: 48px;
     padding: 10px 0;
@@ -96,4 +96,4 @@
     margin-top: 20px;
     margin-bottom: 28px;
     margin-left: 200px;
-   } */
+   }
