--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -1,4 +1,4 @@
-/* .contenter{
+.contenter{
     background: url(images/strong-man-training-gym.jpg) fixed;
     background-position: center;
 }
@@ -130,4 +130,4 @@
       width: 500px;
       font-weight: 100;
 
-  } */
+  }
