--- a/app/assets/stylesheets/arm.css
+++ b/app/assets/stylesheets/arm.css
@@ -1,4 +1,4 @@
-/* .arm-top-gaiyou{
+.arm-top-gaiyou{
     width: auto;
     padding-top: 145px;
     font-size: 40px;
@@ -41,4 +41,4 @@
     border: 1px solid #ddd;
     border-radius: 15px;
     margin-top: 20px;
-} */
+}
