--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -3,7 +3,7 @@
   <div class="gaiyou-name">報告一覧</div>
 </div>
     <main class="main">
-    <h1 class="arm-page-heading">【脚一覧】</h1>
+    <h1 class="arm-page-heading">【投稿一覧】</h1>
       <div class="arm-inner">
         <% @posts.each do |post| %>
         <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
@@ -23,49 +23,4 @@
         <% end %>
       </div>
      </main>
-
-     <main class="main">
-     <h1 class="list-arm-page-heading">【腹筋一覧】</h1>
-       <div class="arm-inner">
-         <% @posts.each do |post| %>
-          <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
-         <div class="arm-card__wrapper">
-           <div class="arm-card">
-           <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
-             <div class="card__body">
-               <h2 class="card__title">投稿者：<%= post.name %></h2>
-               <p class="card__summary">
-               <p>鍛えた部位：<%= post.category.name %></p>
-               <p>一言：<%= post.message %></p>
-               </p>
-             </div>
-           </div>
-           <% end %>
-         </div>
-         <% end %>
-       </div>
-      </main>
-
-      <main class="main">
-      <h1 class="list-arm-page-heading">【腕一覧】</h1>
-        <div class="arm-inner">
-          <% @posts.each do |post| %>
-            <%= link_to post_path(post.id),  :style=>"color:black;",method: :get do %>
-          <div class="arm-card__wrapper">
-            <div class="arm-card">
-            <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
-              <div class="card__body">
-                <h2 class="card__title">投稿者：<%= post.name %></h2>
-                <p class="card__summary">
-                <p>鍛えた部位：<%= post.category.name %></p>
-                <p>一言：<%= post.message %></p>
-                </p>
-              </div>
-            </div>
-            <% end %>
-          </div>
-          <% end %>
-        </div>
-       </main>
-
 </body>
