--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,3 +1,5 @@
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
+
 <div class="top-gaiyou">
 <div class="gaiyou-name">問い合せ</div>
 </div>
