--- a/app/views/posts/destroy.html.erb
+++ b/app/views/posts/destroy.html.erb
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <div class="update-top-gaiyou">
   <div class="update-gaiyou-name">
     <h3>削除が完了しました。</h3>
