--- a/app/views/posts/fukkin.html.erb
+++ b/app/views/posts/fukkin.html.erb
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <div class="arm-top-gaiyou">
   <div class="arm-gaiyou-name">腹筋報告一覧</div>
 </div>
