--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <body>
 <div class="top-gaiyou">
   <div class="gaiyou-name">報告一覧</div>
