--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <div class="show-top-gaiyou">
   <div class="show-gaiyou-name">Pick up</div>
 </div>
