--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -10,7 +10,6 @@
     align-items: center;
     flex-direction: column;
     background-color: rgba(51, 51, 51, 0.9);
-
   }
   .hedde-name{
     font-size: 60px;
@@ -21,12 +20,6 @@
     font-weight: bold;
     margin: 40px auto;
     margin-bottom: 50px;
-    
-  }
-  .title-messages{
-    width: 80vw;
-    padding-left: 200px;
-    color: #fff;
   }
   .daihyou-name-contact{
     font-size: 40px;
@@ -85,6 +78,7 @@
     font-size: 40px;
     font-weight: bold;
     list-style: none;
+    color: white;
   }
   .sub-message2{
     font-size: 30px;
@@ -133,5 +127,4 @@
       border-bottom: 1px solid gray;
       width: 500px;
       font-weight: 100;
-
   }
