--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -31,7 +31,7 @@
   <div class="oogaiyou">
   <table border="0" width=auto>
   <tr class="gaiyou">
-    <th nowrap>団体名　</th>
+    <th nowrap>団体名a　</th>
     <td>筋トレ愛好会　　　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
