--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,3 @@
-@media (max-width: 480px) {
-  .first-view {
-    background: url(images/BO151030535008_TP_V.jpg) fixed;
-    background-size: 100%;
-  }
-}
-
 .header {
     position: fixed;
     top: 0;
@@ -21,6 +14,7 @@
   }
   .logo {
     width: 210px;
+    margin-right: 450px;
   }
   .menu {
     display: flex;
