--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -1,4 +1,4 @@
-<meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <body>
 <div class="contenter">
       <div class="hedde-contents">
@@ -33,7 +33,7 @@
   <div class="oogaiyou">
   <table border="0" width=auto>
   <tr class="gaiyou">
-    <th nowrap>団体名a　</th>
+    <th nowrap>団体名</th>
     <td>筋トレ愛好会　　　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
@@ -42,11 +42,11 @@
     短期・中期目標共有<br>筋トレの成果報告　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
-    <th nowrap>部長　　</th>
+    <th nowrap>部長</th>
     <td>小林章寿　　　　　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
-    <th nowrap>設立　　</th>
+    <th nowrap>設立</th>
     <td>2019年　　　　　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
@@ -54,7 +54,7 @@
     <td>71名 　　　　　　　　　　　　　　　　　　　　</td>
   </tr>
   <tr class="gaiyou">
-    <th nowrap>所在地　</th>
+    <th nowrap>所在地</th>
     <td>東京都渋谷区神南1丁目12-16アジアビル8F</td>
   </tr>
 </table>
