--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,7 @@
   <div class="contents row">
     <div class="container">
     <div class="pampu">
-      <h3>パンプした筋肉にご褒美を</h3>
+      <h3>パンプアップポイント</h3>
     </div>
       <%= form_with model: @post, url:posts_path,local: true do |f| %>
         <div class="front-text">名前</div>
