--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,12 +146,7 @@
         text-align: center;
      }
      .first-view {
-        background: url(images/BO151030535008_TP_V.jpg) fixed;
-        width:100%;
-        max-width: 100%;
-        height: auto;
-        background-size: cover;
-        background-position: center;
+        background-color:black;
         height: 600px;
       }
      .first-view-textarea {
