フォーム変更

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -439,4 +439,9 @@
     border: 0;
     font-size: 18px;
   }
+  .contact{
+      width: 300px;
+      height: 900px;
+      margin-left: 0px;
+  }
   }
