--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,6 +146,9 @@
         text-align: center;
      }
      .first-view {
+        width: auto;
+        height: auto;
+        background-position: center;
         background-color:black;
         height: 600px;
       }
@@ -440,8 +443,8 @@
     font-size: 18px;
   }
   .contact{
-      width: 300px;
-      height: 900px;
-      margin-left: 0px;
+      width: 400px;
+      height: 1000px;
+      margin-left: 50px;
   }
   }
