--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -5,5 +5,5 @@
 </div>
 
 <div class="contact">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGDAJiHfWwdxa8xlPVxudbq9YZaHs8_Dky5pGdClpmKASDAA/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGDAJiHfWwdxa8xlPVxudbq9YZaHs8_Dky5pGdClpmKASDAA/viewform?embedded=true" width=auto height="959" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 </div>
