--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,6 +146,9 @@
         text-align: center;
      }
      .first-view {
+        max-width: 100%;
+        height: auto;
+        background: url(images/BO151030535008_TP_V.jpg) fixed;
         width: auto;
         height: auto;
         background-position: center;
